[project]
name = "agentreview"
version = "0.1.0"
description = "Product review dataset for AI shopping agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
]

[project.scripts]
agentreview = "scrape:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.22",
]
